add assign, complete and initiate to depot
